--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.2.1",
+    "sass": "^1.49.9",
     "vite": "^2.7.13"
   },
   "dependencies": {
